<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".UpdateNoteActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_note_header"
        android:textSize="24sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/update_title_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:background="@drawable/orange_border"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_title"
        android:gravity="center"/>

    <EditText
        android:id="@+id/update_content_et"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/orange_border"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:hint="@string/enter_content" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/update_note" />
</LinearLayout>