<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/list_item_title_tv"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                />
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/list_item_edit"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/edit_note"
                android:src="@drawable/baseline_edit_24"
                android:padding="2dp"
                />
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignEnd="@+id/list_item_edit"
                android:id="@+id/list_item_delete"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/delete_note"
                android:src="@drawable/baseline_delete_24"
                android:padding="2dp"
                />
        </RelativeLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/list_item_content_tv"
    android:textColor="@color/black"
    android:text="@string/content"
    android:textSize="24sp"
    android:maxLines="4"
    android:layout_marginTop="4dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>